[build-system]
requires = ["setuptools>=64", "Cython>=3.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pycon-asyncio-talk"
version = "0.1.0"
description = "Code for my PyCon Namibia 2026 talk on asyncio"
requires-python = ">=3.13"

dependencies = [
    "uvloop"
]

[tool.setuptools]
packages = ["utils"]

[tool.cython]
compile_time_env = {CYTHON_TRACE = "0"}
